Fix icon spacing

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ button:hover {
     grid-row: 1 / -1;
     display: grid;
     align-content: start;
-    gap: 1.5rem;
+    gap: 3rem;
 
     height: 100vh;
     padding: 1.5rem;
@@ -55,6 +55,9 @@ button:hover {
     grid-template-columns: auto auto;
     align-items: center;
     justify-content: left;
+    gap: 0.5rem;
+
+    text-decoration: none;
 }
 
 .logo-container span {
@@ -63,7 +66,7 @@ button:hover {
 
 .menu-list {
     display: grid;
-    gap: 0.5rem;
+    gap: 1rem;
 
     padding: 0;
     padding-left: 0.5rem;
@@ -75,7 +78,7 @@ button:hover {
     display: grid;
     grid-template-columns: auto 1fr;
     align-items: center;
-    gap: 0.5rem;
+    gap: 1rem;
 
     text-decoration: none;
 }
@@ -124,6 +127,7 @@ input[name="search"] {
     align-content: center;
     align-items: center;
     grid-template-columns: repeat(3, auto);
+    gap: 1rem;
 }
 
 .profile-section a {
@@ -238,7 +242,7 @@ input[name="search"] {
     display: grid;
     grid-template-columns: auto auto;
     justify-content: right;
-    gap: 0.5rem;
+    gap: 1rem;
 }
 
 .news-section {
